--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <button type="submit" id="button">Submit</button>
         <br>
     </form>
+    <a href="hi.html">Hi Page</a>
 </body>
 </html>
